--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-	  <title>azda.mooo.com</title>
+	  <title>gnu-levitate</title>
     <style>
       body {
         margin: 0px;
